--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,7 @@ dependencies {
 }
 
 shadowJar {
-    archiveName = 'addressbook.jar'
+    archiveName = 'clientconnect.jar'
 }
 
 defaultTasks 'clean', 'test'
