--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,7 +6,7 @@ header_pages:
   - DeveloperGuide.md
   - AboutUs.md
 
-markdown: kramdown
+markdown: GFM
 
 repository: "AY2122S2-CS2103-W16-1/tp"
 github_icon: "images/github-icon.png"
